--- a/index.html
+++ b/index.html
@@ -52,5 +52,46 @@
             </tr>
         </table>
     </div>
+    <br>
+        <div>
+        <table>
+            <tr>
+                <th colspan="2">CSS task</th>
+            </tr>
+            <tr>
+                <th>Task Number</th>
+                <th>Link</th>
+            </tr>
+            <tr>
+                <td>Task1</td>
+                <td><a href="css_task1.html">Link1</a></td>
+            </tr>
+            <tr>
+                <td>Task2</td>
+                <td><a href="css_task2.html">Link2</a></td>
+            </tr>
+            <tr>
+                <td>Task3</td>
+                <td><a href="css_task3.html">Link3</a></td>
+            </tr>
+            <tr>
+                <td>Task4</td>
+                <td><a href="css_task4.html">Link4</a></td>
+            </tr>
+            <tr>
+                <td>Task5</td>
+                <td><a href="css_task5.html">Link5</a></td>
+            </tr>
+            <tr>
+                <td>Task6</td>
+                <td><a href="css_task6.html">Link6</a></td>
+            </tr>
+            <tr>
+                <td>Task7</td>
+                <td><a href="css_task7.html">Link7</a></td>
+            </tr>
+        </table>
+    
+    </div>
 </body>
 </html>
