--- a/HTML/task4.html
+++ b/HTML/task4.html
@@ -73,7 +73,7 @@
           <option value="female">Female</option>
           <option value="other">Other</option></select
         ><br /><br />
-        <button><a href="index.html">Save</a></button>
+        <button><a href="../index.html">Save</a></button>
       </form>
     </div>
   </body>
