--- a/HTML/task5.html
+++ b/HTML/task5.html
@@ -113,7 +113,7 @@
         
       </table>
       <br />
-      <div style="text-align: center;"><button ><a href="index.html" style="text-decoration: none;color: black;">Register</a></button></div>
+      <div style="text-align: center;"><button ><a href="../index.html" style="text-decoration: none;color: black;">Register</a></button></div>
     </form>
   </body>
 </html>
