--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
             </tr>
             <tr>
                 <td>Task1</td>
-                <td><a href="task1.html">Link1</a></td>
+                <td><a href="HTML/task1.html">Link1</a></td>
             </tr>
             <tr>
                 <td>Task2</td>
-                <td><a href="task2.html">Link2</a></td>
+                <td><a href="HTML/task2.html">Link2</a></td>
             </tr>
             <tr>
                 <td>Task3</td>
-                <td><a href="task3.html">Link3</a></td>
+                <td><a href="HTML/task3.html">Link3</a></td>
             </tr>
             <tr>
                 <td>Task4</td>
-                <td><a href="task4.html">Link4</a></td>
+                <td><a href="HTML/task4.html">Link4</a></td>
             </tr>
             <tr>
                 <td>Task5</td>
-                <td><a href="task5.html">Link5</a></td>
+                <td><a href="HTML/task5.html">Link5</a></td>
             </tr>
         </table>
     </div>
@@ -64,31 +64,31 @@
             </tr>
             <tr>
                 <td>Task1</td>
-                <td><a href="css_task1.html">Link1</a></td>
+                <td><a href="CSS/css_task1.html">Link1</a></td>
             </tr>
             <tr>
                 <td>Task2</td>
-                <td><a href="css_task2.html">Link2</a></td>
+                <td><a href="CSS/css_task2.html">Link2</a></td>
             </tr>
             <tr>
                 <td>Task3</td>
-                <td><a href="css_task3.html">Link3</a></td>
+                <td><a href="CSS/css_task3.html">Link3</a></td>
             </tr>
             <tr>
                 <td>Task4</td>
-                <td><a href="css_task4.html">Link4</a></td>
+                <td><a href="CSS/css_task4.html">Link4</a></td>
             </tr>
             <tr>
                 <td>Task5</td>
-                <td><a href="css_task5.html">Link5</a></td>
+                <td><a href="CSS/css_task5.html">Link5</a></td>
             </tr>
             <tr>
                 <td>Task6</td>
-                <td><a href="css_task6.html">Link6</a></td>
+                <td><a href="CSS/css_task6.html">Link6</a></td>
             </tr>
             <tr>
                 <td>Task7</td>
-                <td><a href="css_task7.html">Link7</a></td>
+                <td><a href="CSS/css_task7.html">Link7</a></td>
             </tr>
         </table>
     
