--- a/CSS/css_task2.html
+++ b/CSS/css_task2.html
@@ -12,7 +12,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#Java">Java</a></li>
         <li><a href="#CSS">CSS</a></li>
-        <li><a href="#HTML">HTMLe</a></li>
+        <li><a href="#HTML">HTML</a></li>
         <li><a href="#BootStrap">BootStrap</a></li>
     </ul>
    
